[package]
name = "neboder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
futures = "0.3.28"
futures-util = "0.3.28"
indicatif = "0.17.3"
reqwest = { version = "0.11.17", features = ["stream"] }
scraper = "0.16.0"
tokio = { version = "1.28.0", features = ["full"] }
